// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package="./;awi";

import "app_connection.proto";

service AppConnectionController {

    // Workload centric connectivity RPCs

    rpc ConnectApps(AppConnection)
        returns (AppConnectionResponse) {} 
    
    rpc DisconnectApps (AppDisconnectionRequest)
        returns (AppDisconnectionResponse) {} 
    
    rpc GetAppConnection(GetAppConnectionRequest)
        returns (GetAppConnectionResponse) {}
    /*
        List all connections that can connect different workloads.  
    */
    rpc ListConnectedApps (ListAppConnectionsRequest) 
        returns (ListAppConnectionsResponse) {}
    
    rpc GetAppConnectionStatus(GetAppConnectionStatusRequest) 
        returns (AppConnectionStatusResponse) {}
    
    rpc GetAppConnectionStatistics(GetAppConnectionStatisticsRequest) 
        returns (AppConnectionStatisticsResponse) {}
    
    rpc GetAppConnectionEvents(GetAppConnectionEventsRequest) 
        returns (AppConnectionEventsResponse) {}

    rpc GetMatchedResources(AppConnection)
            returns (GetMatchedResourcesResponse) {}

    rpc CreateAppConnectionPolicy(CreateAppConnectionPolicyRequest)
            returns (CreateAppConnectionPolicyResponse) {}

    rpc GetAppConnectionPolicy(GetAppConnectionPolicyRequest)
            returns (GetAppConnectionPolicyResponse) {}

    rpc DeleteAppConnectionPolicy(DeleteAppConnectionPolicyRequest)
            returns (DeleteAppConnectionPolicyResponse) {}

    rpc ListAppConnectionPolicies(ListAppConnectionPoliciesRequest)
            returns (ListAppConnectionPoliciesResponse) {}
}
